--- a/style.css
+++ b/style.css
@@ -202,3 +202,10 @@ display: block;
     color: whitesmoke;
     font-size: 1rem;
 }
+section p{
+    color: red;
+    position: relative;
+    left: -11%;
+    margin-top: .5rem;
+    display: none;
+}
